# marketing-analytics-ai-agent

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.yaml  pyproject.toml
.github/codeql/: codeql-config.yml
.github/workflows/: README.md  ci.yml  dependencies.yml  release.yml  security.yml
config/examples/: .env.example  google_ads_config.yaml  google_analytics_config.yaml  setup_instructions.md
docs/: error-handling-system.md  prd.md  testing-guide.md
src/marketing_ai_agent/: __init__.py  version.py
src/marketing_ai_agent/agents/: __init__.py  campaign_analyzer.py  data_ingestion.py  orchestrator.py  recommendation_generator.py  workflow_manager.py
src/marketing_ai_agent/analytics/: __init__.py  anomaly_detector.py  benchmarking.py  performance_scorer.py  predictive_model.py  trend_analyzer.py
src/marketing_ai_agent/api_clients/: __init__.py  ga4_client.py  google_ads_client.py
src/marketing_ai_agent/auth/: __init__.py  config_manager.py  oauth2_manager.py
src/marketing_ai_agent/cli/: __init__.py  main.py
src/marketing_ai_agent/cli/commands/: __init__.py  analytics.py  data.py  optimization.py  report.py
src/marketing_ai_agent/core/: __init__.py  config.py  error_handlers.py  exceptions.py  logging.py  monitoring.py
src/marketing_ai_agent/models/: __init__.py  analytics.py  cache.py  campaign.py  exporters.py  metrics.py  transformers.py
src/marketing_ai_agent/optimization/: __init__.py  ab_testing_optimizer.py  budget_optimizer.py  ml_optimizer.py  recommendations_engine.py  roi_optimizer.py  rule_based_optimizer.py
src/marketing_ai_agent/reports/: __init__.py
src/marketing_ai_agent/utils/: __init__.py  error_demo.py
tests/: __init__.py  conftest.py  factories.py  test_analytics.py  test_auth.py  test_cli.py  test_core.py  test_optimization.py  test_runner.py
